@@ -1,5 +1,7 @@
 0.09
  - Add check_language() helper for check ISO 639-1 language code.
+ - Add check for ISO 639-1 language code to
+   Wikibase::Datatype::Value::Monolingual.
  - Fix doc for Snak 'datavalue' parameter.
  - Fix sentences in doc of Wikibase::Datatype::Utils.
  - Fix usage of Error::Pure::err in Value/* classes.
